--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,64 @@ footer p {
 footer a {
     text-decoration: none;
 }
+
+.slider {
+    width: 70%;
+    margin: 0 auto;
+}
+
+.slider img {
+    width: 100%;
+    height: 560px;
+}
+
+.slider .slick-slide {
+    margin:0 auto;
+}
+
+.slick-prev,
+.slick-next {
+    position: absolute;
+    top: 42%;
+    cursor: pointer;
+    outline: none;
+    border-top: 2px solid #666;
+    border-right: 2px solid #666;
+    height: 15px;
+    width: 15px;
+}
+
+.slick-prev {
+    left: -1.5%;
+    transform: rotate(-135deg);
+}
+
+.slick-next {
+    right: -1.5%;
+    transform: rotate(45deg);
+}
+
+
+.slick-dots {
+    text-align: center;
+    margin: 20px 0 0 0;
+}
+
+.slick-dots li {
+    display: inline-block;
+    margin: 0 5px;
+}
+
+.slick-dots button {
+    color: transparent;
+    outline: none;
+    width: 8px;
+    height: 8px;
+    display: block;
+    border-radius: 50%;
+    background: #ccc;
+}
+
+.slick-dots .slick-actiove button {
+    background: #333;
+}
