--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ footer a {
 .slick-next {
     position: absolute;
     top: 42%;
+    left: 990px;
     cursor: pointer;
     outline: none;
     border-top: 2px solid #666;
