--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,14 @@
 @charset "utf-8";
 
+header {
+    background-color: antiquewhite;
+    height: 105px;
+    margin-bottom: 60px;
+    margin-top: -8px;
+    margin-right: -9px;
+    margin-left: -7px;
+}
+
 .flex-container {
     display: flex;
 }
@@ -66,7 +75,6 @@ footer a {
 .slick-next {
     position: absolute;
     top: 42%;
-    left: 990px;
     cursor: pointer;
     outline: none;
     border-top: 2px solid #666;
@@ -81,7 +89,7 @@ footer a {
 }
 
 .slick-next {
-    right: -1.5%;
+    right: -4.5%;
     transform: rotate(45deg);
 }
 
