--- a/styles.css
+++ b/styles.css
@@ -9,20 +9,39 @@ header {
     margin-left: -7px;
 }
 
-.flex-container {
-    display: flex;
-}
 
-.flex-container h1 {
+.container h1 {
     font-size: 70px;
     margin-top: 5px;
+    float: left;
+}
+
+.container p {
+    font-size: 35px;
+    margin-top: 35px;
+    margin-left: 100px;
+    float: left;
+    color:#666;
+
+}
+
+.container ul {
+    list-style: none;
+    float: right;
+    width: 110px;
+    height: 10px;
+    margin-top: 30px;
     margin-right: 70px;
 }
 
-.flex-container p {
-    font-size: 35px;
-    margin-top: 35px;
-    color:#666;
+.container a {
+    text-decoration: none;
+    color:#333;
+}
+
+.container li {
+    border: solid 2px #333;
+    padding: 10px;
 }
 
 section h2 {
@@ -33,7 +52,7 @@ section h2 {
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 200px 200px;
+    grid-template-rows: 345px 345px;
     gap: 30px;
     margin-right: 60px;
     margin-left: 60px;
@@ -44,8 +63,54 @@ section h2 {
 }
 
 
-.grid-items:hover {
+/* .grid-items:hover {
     transform: scale(1.1, 1.1);
+} */
+
+.grid-items img {
+    width: 250px;
+    height: 160px;
+    padding-top: 10px;
+    padding-left: 100px;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: none;
+    background-color: rgba(0,0,0,0.8);
+}
+
+.bigimg {
+    position:absolute;
+    width: 80%;
+    max-width: 800px;
+    top: 250px;
+    left: 0;
+    right: 0;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.bigimg img {
+    width: 800px;
+    height: 500px;
+}
+
+.close-btn{
+    color: #fff;
+    font-size: 40px;
+    position: absolute;
+    right: 20px;
+    top: 0;
+}
+
+.close-btn a {
+    color: #fff;
+    text-decoration: none;
 }
 
 footer p {
