--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,11 @@ header {
 
 .container h1 {
     font-size: 70px;
+    margin-left: 50px;
     margin-top: 5px;
     float: left;
+    font-family: 'Batang';
+    color:burlywood;
 }
 
 .container p {
@@ -21,7 +24,7 @@ header {
     margin-top: 35px;
     margin-left: 100px;
     float: left;
-    color:#666;
+    color: rgb(235, 172, 95);
 
 }
 
@@ -47,6 +50,7 @@ header {
 section h2 {
     text-align: center;
     font-size: 36px;
+    color:bisque;
 }
 
 .grid-container {
@@ -60,8 +64,18 @@ section h2 {
 
 .grid-items {
     background-color: antiquewhite;
+    text-align: center;
+    font-family:'Meiryo UI';
 }
 
+.grid-items p {
+    font-family: 'Meiryo UI';
+    color:olive;
+}//
+
+.grid-items strong {
+    font-size: 25px;
+}
 
 /* .grid-items:hover {
     transform: scale(1.1, 1.1);
@@ -71,7 +85,8 @@ section h2 {
     width: 250px;
     height: 160px;
     padding-top: 10px;
-    padding-left: 100px;
+    padding-left: 10px;
+    border-radius: 50%;
 }
 
 .modal {
